[package]
name = "medullah-multipart"
version = "0.1.1"
edition = "2021"

publish = ["spiralindex"]

[dependencies]
futures = "0.3.30"
ntex-multipart = "2.0"
tokio = { version = "1", default-features = false, features = ["fs", "io-util"] }
ntex = { version = "2.0", default-features = false }

[dev-dependencies]
mockall = { version = "0.12.1" }
tokio = { version = "1", features = ["full"] }
