[package]
name = "medullah-multipart"
version = "0.2.0"
edition = "2021"

publish = ["spiralindex"]

[dependencies]
futures = "0.3.30"
ntex-multipart = "2.0"
tokio = { version = "1.40", default-features = false, features = ["fs", "io-util"] }
ntex = { version = "2.6", default-features = false }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
