[package]
name = "medullah-multipart"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Library For Handling File Uploads Based on Ntex"
repository = "https://github.com/spiralover/medullah-multipart"

[dependencies]
futures = "0.3.30"
ntex-multipart = "2.0"
tokio = { version = "1.40", default-features = false, features = ["fs", "io-util"] }
ntex = { version = "2.6", default-features = false }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
